[project]
name = "ingest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "inotify>=0.2.10",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "click>=8.2.1",
    "datamodel-code-generator>=0.31.1",
    "pytest>=8.4.1",
    "pytest-httpserver>=1.1.3",
    "ruff>=0.12.3",
    "tuspy>=1.1.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
